fixed Education year overlapping in mobile view

--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -98,6 +98,9 @@
     }
 } 
     @media(max-width:480px){
+        h4{
+            font-size:15pt;
+        }
         .timeline{
             background:url(/assets/timeline.png) repeat-y 0 0;
         }
